Refactor security configuration and user details service for improved clarity and consistency