@@ -18,8 +18,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
   private final UserRepository userRepository;
 
   @Override
-  public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-    User user = userRepository.findByEmail(email)
+  public UserDetails loadUserByUsername(final String email) throws UsernameNotFoundException {
+    final User user = userRepository.findByEmail(email)
                     .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
     return new org.springframework.security.core.userdetails.User(
@@ -29,9 +29,9 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     );
   }
 
-  private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
+  private Collection<? extends GrantedAuthority> mapRolesToAuthorities(final Collection<Role> roles) {
     return roles.stream()
                .map(role -> new SimpleGrantedAuthority("ROLE_" + role.getName()))
-               .collect(Collectors.toList());
+               .toList();
   }
 }
